Adding and updating files

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     <canvas id="barChart" width="800" height="600"></canvas>
     <div class="legend-box">
         <p>AREAS - DIVISION OFFENSE OCCURRED IN</p>
-        <p>EPD - EAST</p>
-        <p>MPD - METRO</p>
-        <p>SCP - SHOAL CREEK</p>
-        <p>SPD - SOUTH</p>
-        <p>CPD - CENTRAL</p>
-        <p>NPD - NORTH</p>
+        <p>EPD - EAST (3)</p>
+        <p>MPD - METRO (6)</p>
+        <p>SCP - SHOAL CREEK (2)</p>
+        <p>SPD - SOUTH (5)</p>
+        <p>CPD - CENTRAL (4)</p>
+        <p>NPD - NORTH (1)</p>
     </div>
     <script src="plots.js"></script>
 </body>
